[build_ext]

[metadata]
license_file = LICENSE

[check-manifest]
ignore =
    .travis.yml
    .dockerignore
    CHANGELOG.md
    Dockerfile
    Dockerfile-sqlserver
    Dockerfile-valgrind
    Makefile
    appveyor
    appveyor/*
    appveyor.yml
    codecov.yml
    ctds/tests
    ctds/tests/*
    doc
    doc/*
    misc
    misc/*
    pylintrc
    scripts
    scripts/*
    test-setup.sql
    travis
    travis/*
    tests
    tests/*
    tests/pool/*
    windows
    windows/*
