[build_ext]

[metadata]
license_file = LICENSE

[check-manifest]
ignore =
    .dockerignore
    .python-version
    CHANGELOG.md
    Dockerfile-valgrind
    Makefile
    tox.ini
    .github/*
    appveyor/*
    appveyor.yml
    codecov.yml
    ctds/tests/*
    doc/*
    misc/*
    pylintrc
    scripts/*
    test-setup.sql
    travis/*
    tests/*
    tests/pool/*
    windows/*
