[build_ext]

[metadata]
license_file = LICENSE

[check-manifest]
ignore =
    .dockerignore
    .python-version
    appveyor.yml
    codecov.yml
    CHANGELOG.md
    Dockerfile-valgrind
    Makefile
    pylintrc
    tox.ini
    .github
    .github/*
    appveyor
    appveyor/*
    doc
    doc/*
    misc
    misc/*
    scripts
    scripts/*
    tests
    tests/*
    tests/pool
    tests/pool/*
    windows
    windows/*
